feat(onboarding): running registration endpoint with strapi integrated